styles/globals.css
@import url("https://fonts.googleapis.com/css2?family=PT+Sans:wght@400,700&display=swap");

@tailwind base;
@tailwind components;
@tailwind utilities;

a.notable-link {
  @apply text-indigo-600 dark:text-blue-300 inline-flex items-center;
  @apply transition-opacity duration-200 ease-in-out;
  @apply opacity-100;
}

a.notable-link:hover {
  @apply opacity-70;
}

/* Feature Dot Colors */

.feature-indigo {
  @apply bg-indigo-400 border-indigo-500;
}

.feature-purple {
  @apply bg-purple-500 border-purple-600;
}

.feature-amber {
  @apply bg-yellow-400 border-yellow-500;
}

.feature-blue {
  @apply bg-blue-400 border-blue-500;
}

.feature-gray {
  @apply bg-gray-400 border-gray-500;
}

.feature-green {
  @apply bg-green-400 border-green-500;
}

.colorful,
.colorful .colorful-shadow {
  @apply text-gray-900 transition-colors duration-300 ease-in-out;
}

.colorful .colorful-shadow {
  @apply bg-purple-100;
  @apply bg-opacity-0;
}

.colorful:hover {
  @apply text-purple-500;
}

.colorful:hover .colorful-shadow {
  @apply text-purple-800;
  @apply bg-purple-100;
}

